--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>React App</title>
   </head>
   <body>
+    <h1>Kalvium Gallary</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
